# promad

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: cli.rs  error.rs  lib.rs
src/repo/: mod.rs  postgres.rs
tests/: test_basic.rs
tests/common/: mod.rs  postgres.rs
