[package]
name = "nomad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Make feature flags for postgres
[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "^4.3.0", features = ["derive"] }
colored = "2.0.0"
gag = "1.0.0"
indicatif = "0.17.3"
lazy_static = "1.4.0"
libc = "0.2.144"
prettytable = "0.10.0"
sqlx = { version = "^0.6.3", features = ["chrono", "runtime-tokio-native-tls"] }
tempfile = "3.5.0"
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
testcontainers = "0.14.0"
lazy_static = "1.4.0"
