[package]
name = "promad"
version = "0.1.1"
edition = "2021"
description = "Migration tool for SQLx"
license = "Apache-2.0"

# Make feature flags for postgres
[features]
default = ["postgres", "native-tls"]
postgres = ["sqlx/postgres"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "^4.3.0", features = ["derive"] }
colored = "2.0.0"
gag = "1.0.0"
indicatif = "0.17.3"
libc = "0.2.144"
once_cell = "1.17.2"
prettytable = "0.10.0"
sqlx = { version = "^0.6.3", features = ["chrono"] }
tempfile = "3.5.0"
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
testcontainers = "0.14.0"
tracing = "0.1.37"
